--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://univahost.com/blog
 Author: ThemeAsia
 Author URI: https://themeasia.net
 Description: ArticlePress Is Clean and Modern design WordPress Blog Theme that let you build an exclusive website for Blog, Magazine, affiliate Site or any blogs site. Try this theme today, you will never think about alternatives.
-Version: 1.4.9
+Version: 1.4.10
 Requires at least: 4.7
 Requires PHP: 7.0
 Tested up to: 5.5
@@ -78,6 +78,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
  */
 :root {
     --primary-color: #7660ff;
+    --secondary-color: #ff4f5a;
     --primary-dark: #3b566e;
 }
 body {
@@ -1386,10 +1387,10 @@ a.btn {
     margin-top: 30px;
 }
 a.btn.btn-blog:hover {
-    background: var( --primary-color );
+    background: var(--secondary-color);
 }
 .btn-blog {
-    background-color: #5bd5e8;
+    background-color: var(--primary-color);
     color: #fff;
     border: 1px solid transparent;
 }
@@ -1492,14 +1493,14 @@ section#search-2 {margin-bottom: 70px;}
 
 
 .widget ul li a:hover {
-    color: #5bd5e8;
+    color: var(--primary-color);
 }
 .widget ul li:before {
     content: '\203A';
     position: absolute;
     font-size: 23px;
     line-height: 21px;
-    color: #5bd5e8;
+    color: var(--primary-color);
 }
 .widget ul li a, .widget ul li span {
     margin-left: 15px;
@@ -1677,6 +1678,7 @@ section.no-results.not-found .articlepress-search-form {
     -webkit-transform: scale(1.05);
     -ms-transform: scale(1.05);
     transform: scale(1.05);
+    background: var(--secondary-color);
 }
 .search-input::-webkit-input-placeholder {
     color: white;
